# GenAI-Services-FastAPI

./: .gitignore  CLAUDE.md  README.md  api_main.py  bento.py  client_st.py  client_st_audio.py  client_st_image.py  client_st_unified.py  models.py  pyproject.toml  schemas.py  settings.py  utils.py
src/genai_services/: __init__.py  settings.py  tinyllama.py
src/genai_services/part1/: api_main.py  bento.py  client_st_unified.py  models.py  schemas.py
src/genai_services/part2/: api_sync_async.py  async.py  main_ollama_text_gen.py  ollama_async_model_serving.py
src/genai_services/part2/project-1-llm-web-scrape/: api_scraper.py  scraper.py
src/genai_services/part2/project-2-rag/: client_rag.py  transform.py  upload.py
src/genai_services/part2/project_1_llm_web_scraper/: api_scraper.py  client_scraper.py  dependencies.py  scraper.py
src/genai_services/part2/project_2_rag/: api_main.py  client_rag.py  dependencies.py  extractor.py  repository.py  transform.py  upload.py  vector_service.py
tests/: test_main.py
